[package]
name = "modbius"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/DrSloth/modbius"
home = "https://github.com/DrSloth/modbius"
keywords = ["fieldbus", "modbus", "iot", "embedded", "nostd", "modbius"]
description = "Modbius core parsing library"
license = "MIT"
readme = "README.md"
