[package]
name = "modbius-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DrSloth/modbius"
home = "https://github.com/DrSloth/modbius"
keywords = ["fieldbus", "modbus", "iot", "nostd", "modbius"]
description = "Modbius core parsing library"
license = "MIT"
readme = "README.md"
